--- a/calico-cloud/get-started/connect/requirements/system-requirements.mdx
+++ b/calico-cloud/get-started/connect/requirements/system-requirements.mdx
@@ -19,7 +19,7 @@ Verify that your cluster meets these requirements.
 | **Architecture**            | Only AMD64                                                   |
 | **Kubernetes version**      | - Minimum: v1.23<br/>- Maximum: v1.28<br /><br />If you have a later version than the maximum, contact [Support](https://support.tigera.io/). |
 | **CNIs**                    | - Calico CNI v3.15 to v3.26<br />- Amazon VPC CNI<br/>- Azure CNI<br/>- GKE CNI |
-| **Browsers for Manager UI** | {{prodname}} supports the latest version and "latest minus one" versions of the following browsers:<br/><br/>- Chrome<br/>- Firefox<br/>- Safari |
+| **Browsers for Manager UI** | {{prodname}} supports the latest version and "latest minus one" versions of the following browsers:<br/><br/>- Chrome<br/>- Safari<br/>- Firefox |
 
 ### Step 2: Verify cluster is not managed by a Kubernetes reconciler
 
