--- a/calico-enterprise/getting-started/compatibility.mdx
+++ b/calico-enterprise/getting-started/compatibility.mdx
@@ -167,3 +167,11 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 | 3.13                 | 1.5         | {{prodname}} CNI with network policy | 1.21                   |
 | 3.12                 | 1.4, 1.5    | {{prodname}} CNI with network policy | 1.20 (1.4), 1.21 (1.5) |
 | 3.11                 | 1.3         | {{prodname}} CNI with network policy | 1.20                   |
+
+## Supported browsers
+
+The following list shows the browsers supported by {{prodname}} in this release.
+
+- Chrome
+- Safari
+- Firefox
