--- a/calico-cloud/get-started/connect/install-cluster.mdx
+++ b/calico-cloud/get-started/connect/install-cluster.mdx
@@ -1,75 +1,37 @@
 ---
 description: Steps to connect your cluster to Calico Cloud.
+title: Install
 ---
 
 # Connect a cluster to Calico Cloud
 
-## Before you begin
+You can connect a cluster to Calico Cloud by generating a unique kubectl command in the Calico Cloud Manager UI and running it on your cluster.
 
-Connecting to {{prodname}} is easy, and is done in **Manager UI**, **Managed Clusters** using an installation wizard.
+## Prerequisites
 
-Although not required, it may save you troubleshooting if you verify your cluster meets [system requirements](requirements/system-requirements.mdx).
+* You have an active Calico Cloud account. You can sign up for a 14-day free trial at [calicocloud.io](https://calicocloud.io).
+* You are signed in to the Calico Cloud Manager UI as a user with the **Owner**, **Admin**, or **DevOps** role.
+* You have at least one cluster that meets our [system requirements](requirements/system-requirements.mdx).
+* You have kubectl access to the cluster.
 
-## Install options
+## Connect a cluster to Calico Cloud
 
-{{prodname}} provides the following install options. Note that after initial installation, you cannot reinstall the cluster with a different option.
+1. From the **Managed Clusters** page, click **Connect Cluster**.
+1. In the **Connect a Cluster** dialog, enter a **Cluster Name** and select a **Cluster Type**.
+1. (Optional) If you must install a specific older release, select the Calico Cloud version you want to install.
+We always recommend the latest version, which is installed by default.
+1. Click **Connect** to generate a unique kubectl command. Copy the command.
 
-- Default (kubectl)
-- Private image registry using Helm charts
-- Helm charts
+```bash title="Example of generated kubectl installation command"
+kubectl apply -f https://installer.calicocloud.io/manifests/cc-operator/latest/deploy.yaml && curl -H "Authorization: Bearer mprcnz04t:9dav6eoag:s8w7xjslez1x1xkf6ds0h23miz5b1fw6phh9897d0n76e4pjfdekijowjv5lw9dd" "https://www.calicocloud.io/api/managed-cluster/deploy.yaml?version=v19.1.0" | kubectl apply -f -
+   ```
 
-Choose your install option and follow the steps.
+1. From a terminal, paste and run the command.
+1. On the **Managed Clusters** page, you should immediately see your cluster in the list of managed clusters.
+Monitor the status under **Connection Status**.
+When the status changes to **Connected**, installation is complete and your cluster is connected to Calico CLoud.
 
-## Default
+## Additional resources
 
-**Required:** `kubectl` access to the cluster
-
-1. On the **Managed Clusters** page, click **Connect Cluster**.
-1. Add the **Cluster Name**, and select the **Cluster Type**.
-1. (Optional) If you must install a specific older release, select the {{prodname}} version you want to install. We always recommend the latest version, which is installed by default.
-1. Click **Connect** and follow the wizard.
-1. Monitor the progress on the Managed Clusters page.
-
-## Private registry
-
-**Required**:
-
-- Helm v3
-- Before you start the installation wizard, add {{prodname}} images to a [private registry](setup-private-registry.mdx). You'll need the following values in the installation wizard:
-
-  - **Registry Secret Name**
-    :::note
-
-    If your private registry requires credentials, create the **calico-cloud** namespace on your cluster. Then, create an image pull secret and use this name for the **Registry Secret Name**.
-
-    :::
-
-  - **Image Registry**
-  - **Image Path**
-
-1. On the **Managed Clusters** page, click **Connect Cluster**.
-1. Add the **Cluster Name**, and select the **Cluster Type**.
-1. (Optional) If you must install a specific older release, select the {{prodname}} version you want to install. We always recommend the latest version, which is installed by default.
-1. Click **Advanced Options**, and select both **Install via helm** and **Install private registry**. (Private registry supports only Helm).
-
-   ![private-registry](/img/calico-cloud/private-registry.png)
-1. Complete the fields, ensuring that your inputs match the values used when setting up your private registry.
-1. Click **Connect** and follow the wizard.
-1. Monitor the progress on the Managed Clusters page.
-
-## Helm
-
-**Required**: Helm v3
-
-1. On the **Managed Clusters** page, click **Connect Cluster**.
-1. Add the **Cluster Name**, and select the **Cluster Type**.
-1. Select the version of {{prodname}} you want to install
-1. Click **Advanced Options**, and select **Install via helm**.
-
-   ![helm](/img/calico-cloud/helm.png)
-1. Click **Connect** and follow the wizard.
-1. Monitor the progress on the Managed Clusters page.
-
-## Need help?
-
-See [Troubleshooting checklist](checklist.mdx) and [Tigera operator troubleshooting checklist](operator-checklist.mdx).
+* [Calico Cloud troubleshooting checklist](checklist.mdx)
+* [Tigera operator troubleshooting checklist](operator-checklist.mdx)
