--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/aks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/aks.mdx
@@ -41,6 +41,12 @@ Install {{prodname}} on an AKS managed Kubernetes cluster.
     details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:Yes,Routing:VPC Native,Datastore:Kubernetes'
   />
 
+**Recommended**
+
+- Set suggested value for maximum number of pods per node
+  
+  It is recommended to set the maximum pods per node to be at least 60 for use with Calico Enterprise. The default value in AKS is 30. If you need to increase the number of pods per node, see [Configure maximum pods per node](https://docs.microsoft.com/en-us/azure/aks/configure-azure-cni#configure-maximum-pods-per-node).
+
 **Required**
 
 - A [compatible AKS cluster](../compatibility.mdx#aks)
@@ -48,10 +54,6 @@ Install {{prodname}} on an AKS managed Kubernetes cluster.
   - To use the Calico CNI, you must configure the AKS cluster with [Bring your own CNI](https://docs.microsoft.com/en-us/azure/aks/use-byo-cni?tabs=azure-cli)
   - To use the Azure CNI, see [Azure CNI networking](https://docs.microsoft.com/en-us/azure/aks/configure-azure-cni)
   - To use the Azure CNI with overlay networking, see [Azure CNI with Overlay](https://learn.microsoft.com/en-us/azure/aks/azure-cni-overlay)
-
-- Appropriate value for number of pods per node
-  
-  It is recommended to set the maximum pods per node to be at least 60 for use with Calico Enterprise. The default value in AKS is 30. If you need to increase the number of pods per node, see [Configure maximum pods per node](https://docs.microsoft.com/en-us/azure/aks/configure-azure-cni#configure-maximum-pods-per-node).
 
 - Cluster is not using a Kubernetes reconciler
 
