--- a/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
@@ -29,8 +29,6 @@ We've updated the Endpoints page in Manager UI with a new flow logs panel so you
 
 We've added the following improvements to the [Security events list](../threat/security-event-management):
 
-We've added the following improvements to the [Security events list](../threat/security-event-management):
-
 - Jira and Slack webhook integration for security event alerts
 
   By [configuring security event alerts](../threat/configuring-webhooks), you can push security event alerts to Slack, Jira, or an external HTTP endpoint of your choice.
@@ -123,7 +121,7 @@ This release expands our support to clusters with nodes running ARM64-based arch
 
 February 2, 2024
 
-Calico Enterprise 3.19.-1.0 is now available as an early preview release.
+Calico Enterprise 3.19.0-1.0 is now available as an early preview release.
 This release is for previewing and testing purposes only.
 It is not supported for use in production.
 
@@ -131,7 +129,7 @@ It is not supported for use in production.
 
 May 9, 2024
 
-Calico Enterprise 3.19.-2.0 is now available as an early preview release.
+Calico Enterprise 3.19.0-2.0 is now available as an early preview release.
 This release is for previewing and testing purposes only.
 It is not supported for use in production.
 
