--- a/calico-enterprise_versioned_docs/version-3.19-2/threat/deploying-waf-ingress-gateway.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/threat/deploying-waf-ingress-gateway.mdx
@@ -1,5 +1,5 @@
 ---
-description: Deply WAF with ingress gateways
+description: Deploy WAF with ingress gateways
 ---
 
 # Deploying WAF with an ingress gateway
@@ -174,6 +174,21 @@ Override the httpbin VirtualService config from the HTTPBin Tutorial with the fo
 
 ```bash
 kubectl apply -f - <<EOF
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: httpbin-gateway
+spec:
+  selector:
+    istio: ingressgateway
+  servers:
+  - port:
+      number: 80
+      name: http
+      protocol: HTTP
+    hosts:
+    - "*"
+---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
