--- a/calico-cloud_versioned_docs/version-19-2/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/networking/egress/egress-gateway-on-prem.mdx
@@ -392,7 +392,7 @@ For example, you can:
 
 The following is an example of Egress Gateway Policy:
 
-t```yaml noValidation
+```yaml noValidation
 apiVersion: projectcalico.org/v3
 kind: EgressGatewayPolicy
 metadata:
