DOCS-2221: Preparation for CE 3.19.1 release

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -146,11 +146,11 @@ This release is for previewing and testing purposes only.
 It is not supported for use in production.
 This release includes improvements and bug fixes.
 
-### Calico Enterprise 3.18.1 GA
+### Calico Enterprise 3.18.1 general availability 
 
 January 17, 2024
 
-Calico Enterprise 3.18.1 is now available as a GA release.
+Calico Enterprise 3.18.1 is now generally available.
 
 This release is supported for use in production.
 
