--- a/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
@@ -103,7 +103,7 @@ This release expands our support to clusters with nodes running ARM64-based arch
 ## Bug fixes
 
 * Updates have been made to the Calico API server to ensure that Calico network policies can be sync with GitOps tools such as ArgoCD.
-
+<!--TODO add bug fixes for GA release-->
 
 ## Known issues
 
@@ -115,6 +115,8 @@ This release expands our support to clusters with nodes running ARM64-based arch
 * Calico panics if kube-proxy or other components are using native `nftables` rules instead of the `iptables-nft` compatibility shim. Until Calico supports native nftables mode, we recommend that you continue to use the iptables-nft compatibility layer for all components. (The compatibility layer was the only option before Kubernetes v1.29 added alpha-level `nftables` support.) Do not run Calico in "legacy" iptables mode on a system that is also using `nftables`. Although this combination does not panic or fail (at least on kernels that support both), the interaction between `iptables` "legacy" mode and `nftables` is confusing: both `iptables` and `nftables` rules can be executed on the same packet, leading to policy verdicts being "overturned".
 * When a tier order is set to the maximum float value (1.7976931348623157e+308), this can cause policy re-ordering in the UI not to work properly. Since the `namespace-isolation` tier has this value by default, policy recommendation users are affected. To workaround this issue edit any tier that has this value for the order. For example: use `kubectl edit tier namespace-isolation` and set the order to `10000`.
 * Linseed deployment needs to be manually restarted after an upgrade. Without a restart, Linseed can't ingest data because it can't authenticate with Elastic.
+ <!--TODO add known issues for GA release-->
+
 
 ## Release details
 
@@ -134,4 +136,18 @@ Calico Enterprise 3.19.0-2.0 is now available as an early preview release.
 This release is for previewing and testing purposes only.
 It is not supported for use in production.
 
+#### Updating
+
 To update an existing installation of Calico Enterprise 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
+
+### Calico Enterprise 3.19.1 general availability release
+
+June DD, 2024
+
+Calico Enterprise 3.18.1 is now generally available.
+
+This release is supported for use in production.
+
+#### Updating
+
+To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
