--- a/calico-cloud/reference/component-resources/configure-resources.mdx
+++ b/calico-cloud/reference/component-resources/configure-resources.mdx
@@ -700,7 +700,7 @@ This command will output the configured resource requests and limits for the Pac
 
 ## Update via Helm
 
-To update configurations during installation via the [Helm chart](../../getting-started/install-on-clusters/kubernetes/helm#install-calico-enterprise), modify the values.yaml with the necessary resource values for the components prior to executing the helm install.
+To update configurations during installation via the Helm chart, modify the `values.yaml` file with the necessary resource values for the components prior to executing the helm install.
 
 :::note
 The provided example illustrates configuring the apiserver component. Follow a similar approach for other components to update resource requests and limits during installation using the Helm chart.
